Invalid shifts should be ignored in totals. Also, Add a composer script for static analysis.

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "sort-packages": true
   },
   "scripts": {
-    "tests": "phpunit"
+    "tests": "phpunit",
+    "analyse": "phpstan"
   }
 }
